Development
	Fix make dist so that rpmbuild works again
	Fix automake rules to allow --disable-schemas-install configure flag
	Make requirement on GCONF optional (--without-gconf on ./configure line)
0.8.0
	Add embed 'showcontrols' option and 'onendofstream' event
    	Add mimetypes for matroska audio and video files
	Remove gthread from the list of requirements
0.7.0
    	Limit bitrate requests to 5 per item, should prevent CPU peg
	Add in audio mp4 mime types
	Add libxul-unstable checks in
	Remove mozilla-plugin out of the libxul test
0.6.3
        Update URL in about:plugins page
0.6.2
	Add Turkish translation by Onur Küçük
	Add back in "Plug-in" to QT description
	Change "QuickTime Plug-in 6.0 /7" to "QuickTime 7.4.5"
	Better local file handling
    	Detect local files and play them directly
0.6.1
	Update Makefile.am to install schema file correctly 
	Update aclocal/automake settings
	Add embedoption "enablefullscreen" works like "enablecontextmenu" to prevent user from
		making the window fullscreen
	No longer require libxul-embedding on F9
	Remove debian files, add DOCS/tech/javascript.txt
	Added Spanish translation by Festor Wailon Dacoba
0.6.0
	Set start trigger to be based off of media bitrate
		New trigger code works like this
		Test for > 20% and over cache size
		Test for 2 * cache size as long as cache size > 512
		Test for downloaded amount / bitrate > 10
	Trigger at either 20% of media or 2 * cache size whichever is smaller
	Fix compliation problem with xulrunner on Fedora 9
0.5.4
	Fix .h generation problem
	Add support for tv:// type devices
	Change "Windows Media Player Plugin" to "Windows Media Player Plug-in"
0.5.3
	Added Polish translation
	Print Error on unable to launch gnome-mplayer
	Increase URL buffer from 1K to 4K
	Added pt_BR language
	Set Copy Url eariler in the code, so that you can copy the url before 20% buffer
	Fix problem with uninitialized width and height and NP_FULL media
0.5.2
	Add French translation